--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -11,7 +11,7 @@
   <h1>Trier, modifier, créer vos listes</h1>
   <p class="subtitle">Créez des listes de références pour retrouver facilement vos sources et concentrez-vous sur ce qui compte vraiment.</p>
 </section>
-<section class="our-list">
+<section class="grid-1">
   <div class="flex-title-list">
     <h2>Vos listes</h2>
     <%= link_to 'Créer votre liste', new_list_path, class:"button dark" %>
