--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -61,3 +61,10 @@
   color: #202020;
   text-decoration:underline;
 }
+@media screen and (max-width: 425px) {
+  .close-popup {
+    scale: 0.6;
+    right: 0px;
+  }
+
+}
