--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,125 +1,40 @@
-<style>
-  .flex-card {
-    margin-top: 24px;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 8px;
-    justify-content: flex-start;
-  }
-  .title {
-    margin-top: 32px;
-    font-weight: 500;
-    font-size: 24px;
-  }
-  .default-overlay {
-    border-radius: 5px;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-  .card-list {
-    width: 13vw;
-    height: 13vw;
-    display: flex;
-    align-items: end;
-    border: 1px solid #E9E9E9;
-    border-radius: 5px;
-    position: relative;
-    background-color: rgba(255, 255, 255, 0.8);
-    box-sizing: border-box;
-  }
-  .card-title {
-    position: relative;
-    font-weight: 500;
-    font-size: clamp(1.25rem, 0.85rem + 0.8vw, 1.75rem);
-    width: 60%;
-    color: #FFF;
-    padding: 20px;
-  }
-  .card-checked {
-    opacity: 0.6;
-  }
-  .hidden {
-    display: none;
-  }
-  .hidden-check {
-    visibility: hidden;
-  }
-
-  .search-container {
-    position: relative;
-    width: 30vw;
-    height: 70px;
-    margin-top: 30px;
-  }
-  .search-container input[type="search"] {
-    width: 100%;
-    height: 100%;
-    padding-left: 50px;
-    border: none;
-    border-radius: 5px;
-    font-weight: 500;
-    font-size: 16px;
-    color: #202020;
-    background-color: #FFF;
-  }
-  .search-container input[type="search"]::placeholder {
-    color: #202020;
-  }
-  .search-container .search-icon {
-    position: absolute;
-    top: 50%;
-    left: 15px;
-    transform: translateY(-50%);
-    width: 18px;
-    height: 18px;
-  }
-  .button.large {
-    margin-top: 32px;
-  }
-  .form-footer {
-    display: flex;
-    justify-content: flex-end;
-  }
-</style>
 <%= form_with(model: @list, local: true, data: { turbo: false }) do |form| %>
   <%= form.text_field :name, placeholder: "Nom de la liste" %>
-  <h2 class="title">Designers</h2>
+  <h2 style="margin-top:32px" class="title">Designers</h2>
   <div class="search-container">
     <input type="search" id="designer-search" placeholder="Rechercher des designers" />
     <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none" style="fill: #202020;">
       <path d="M14.7564 13.4147L11.9565 10.6231C12.8599 9.47218 13.3501 8.051 13.3482 6.58794C13.3482 5.28497 12.9619 4.01126 12.238 2.92788C11.5141 1.8445 10.4852 1.00011 9.2814 0.50148C8.07761 0.00285444 6.753 -0.127609 5.47506 0.126588C4.19713 0.380785 3.02327 1.00823 2.10193 1.92957C1.18059 2.8509 0.553149 4.02476 0.298952 5.3027C0.0447546 6.58063 0.175218 7.90525 0.673843 9.10903C1.17247 10.3128 2.01686 11.3417 3.10024 12.0656C4.18362 12.7895 5.45733 13.1759 6.7603 13.1759C8.22336 13.1777 9.64455 12.6875 10.7954 11.7842L13.5871 14.584C13.6636 14.6612 13.7547 14.7225 13.855 14.7643C13.9554 14.8061 14.063 14.8276 14.1717 14.8276C14.2804 14.8276 14.3881 14.8061 14.4884 14.7643C14.5888 14.7225 14.6799 14.6612 14.7564 14.584C14.8336 14.5075 14.8949 14.4164 14.9367 14.3161C14.9785 14.2157 15 14.1081 15 13.9994C15 13.8907 14.9785 13.783 14.9367 13.6827C14.8949 13.5823 14.8336 13.4912 14.7564 13.4147ZM1.81935 6.58794C1.81935 5.61071 2.10913 4.65543 2.65205 3.84289C3.19497 3.03036 3.96664 2.39706 4.86948 2.02309C5.77232 1.64913 6.76578 1.55128 7.72424 1.74193C8.68269 1.93257 9.56308 2.40315 10.2541 3.09416C10.9451 3.78516 11.4157 4.66556 11.6063 5.62401C11.797 6.58246 11.6991 7.57592 11.3251 8.47876C10.9512 9.3816 10.3179 10.1533 9.50535 10.6962C8.69281 11.2391 7.73753 11.5289 6.7603 11.5289C5.44988 11.5289 4.19313 11.0083 3.26652 10.0817C2.33991 9.15511 1.81935 7.89836 1.81935 6.58794Z" fill="%23202020"/>
     </svg>
   </div>
-  <div id="designers-list" class="flex-card">
+  <div id="designers-list" class="flex-card" style="margin-top:32px" >
     <%= form.collection_check_boxes :designer_ids, Designer.where(validation: true).order(:nom_designer), :id, :nom_designer do |b| %>
       <div class="check-box-wrapper">
         <%= b.check_box(class: 'hidden-check', id: "designer_#{b.object.id}") %>
         <%= b.label for: "designer_#{b.object.id}" do %>
-          <div class="card-list" style="background: url('<%= b.object.image %>'); background-size: cover; background-position: center;">
+          <div class="card-list-add" style="background: url('<%= b.object.image %>'); background-size: cover; background-position: center;">
             <div class="default-overlay"></div>
-            <p class="card-title"><%= b.object.nom_designer %></p>
+            <p class="card-title-add"><%= b.object.nom_designer %></p>
           </div>
         <% end %>
       </div>
     <% end %>
   </div>
-  <h2 class="title">Références</h2>
+  <h2 style="margin-top:32px" class="title">Références</h2>
   <div class="search-container">
     <input type="search" id="oeuvre-search" placeholder="Rechercher des œuvres" />
     <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 15 15" fill="none" style="fill: #202020;">
       <path d="M14.7564 13.4147L11.9565 10.6231C12.8599 9.47218 13.3501 8.051 13.3482 6.58794C13.3482 5.28497 12.9619 4.01126 12.238 2.92788C11.5141 1.8445 10.4852 1.00011 9.2814 0.50148C8.07761 0.00285444 6.753 -0.127609 5.47506 0.126588C4.19713 0.380785 3.02327 1.00823 2.10193 1.92957C1.18059 2.8509 0.553149 4.02476 0.298952 5.3027C0.0447546 6.58063 0.175218 7.90525 0.673843 9.10903C1.17247 10.3128 2.01686 11.3417 3.10024 12.0656C4.18362 12.7895 5.45733 13.1759 6.7603 13.1759C8.22336 13.1777 9.64455 12.6875 10.7954 11.7842L13.5871 14.584C13.6636 14.6612 13.7547 14.7225 13.855 14.7643C13.9554 14.8061 14.063 14.8276 14.1717 14.8276C14.2804 14.8276 14.3881 14.8061 14.4884 14.7643C14.5888 14.7225 14.6799 14.6612 14.7564 14.584C14.8336 14.5075 14.8949 14.4164 14.9367 14.3161C14.9785 14.2157 15 14.1081 15 13.9994C15 13.8907 14.9785 13.783 14.9367 13.6827C14.8949 13.5823 14.8336 13.4912 14.7564 13.4147ZM1.81935 6.58794C1.81935 5.61071 2.10913 4.65543 2.65205 3.84289C3.19497 3.03036 3.96664 2.39706 4.86948 2.02309C5.77232 1.64913 6.76578 1.55128 7.72424 1.74193C8.68269 1.93257 9.56308 2.40315 10.2541 3.09416C10.9451 3.78516 11.4157 4.66556 11.6063 5.62401C11.797 6.58246 11.6991 7.57592 11.3251 8.47876C10.9512 9.3816 10.3179 10.1533 9.50535 10.6962C8.69281 11.2391 7.73753 11.5289 6.7603 11.5289C5.44988 11.5289 4.19313 11.0083 3.26652 10.0817C2.33991 9.15511 1.81935 7.89836 1.81935 6.58794Z" fill="%23202020"/>
     </svg>
   </div>
-  <div id="oeuvres-list" class="flex-card">
+  <div id="oeuvres-list" class="flex-card" style="margin-top:32px" >
     <%= form.collection_check_boxes :oeuvre_ids, Oeuvre.where(validation: true).order(:nom_oeuvre), :id, :nom_oeuvre do |b| %>
       <div class="check-box-wrapper">
         <%= b.check_box(class: 'hidden-check', id: "oeuvre_#{b.object.id}") %>
         <%= b.label for: "oeuvre_#{b.object.id}" do %>
-          <div class="card-list" style="background: url('<%= b.object.image %>'); background-size: cover; background-position: center;">
+          <div class="card-list-add" style="background: url('<%= b.object.image %>'); background-size: cover; background-position: center;">
             <div class="default-overlay"></div>
-            <p class="card-title"><%= b.object.nom_oeuvre %></p>
+            <p class="card-title-add"><%= b.object.nom_oeuvre %></p>
           </div>
         <% end %>
       </div>
@@ -135,7 +50,7 @@
 
     checkboxes.forEach(checkbox => {
       checkbox.addEventListener('change', () => {
-        const card = checkbox.closest('.check-box-wrapper').querySelector('.card-list');
+        const card = checkbox.closest('.check-box-wrapper').querySelector('.card-list-add');
         if (checkbox.checked) {
           card.classList.add('card-checked');
         } else {
@@ -145,7 +60,7 @@
 
       // Initialize the card-checked class based on initial checkbox state
       if (checkbox.checked) {
-        const card = checkbox.closest('.check-box-wrapper').querySelector('.card-list');
+        const card = checkbox.closest('.check-box-wrapper').querySelector('.card-list-add');
         card.classList.add('card-checked');
       }
     });
@@ -169,7 +84,7 @@
       const cards = container.querySelectorAll('.check-box-wrapper');
 
       cards.forEach(card => {
-        const title = card.querySelector('.card-title').textContent.toLowerCase();
+        const title = card.querySelector('.card-title-add').textContent.toLowerCase();
         if (title.includes(query)) {
           card.classList.remove('hidden');
         } else {
