--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -1,389 +1,3 @@
-<style>
-  .top-header{
-    padding: 64px 10vw;
-    height: 150px;
-    background-color: #202020;
-    color:#FFF;
-    position: relative;
-  }
-  .subtitle{
-    width: 50vw;
-  }
-
-  .flex-title{
-    margin-top: 32px;
-    display: flex;
-    gap: 16px;
-    align-items: center;
-  }
-
-  .flex-title-list{
-    margin-top: 64px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  .list-show{
-    padding: 0 10vw;
-  }
-  .flex-card-list{
-    margin-top: 32px;
-    display: flex;
-    flex-wrap:wrap;
-    gap: 2.3vw;
-  }
-  .card-list{
-    overflow: hidden;
-    width: 18vw;
-    height: 18vw;
-    display: flex;
-    align-items: end;
-    border: 1px solid #E9E9E9;
-    border-radius:5px;
-    position: relative;
-  }
-  .overlay {
-    border-radius: 5px;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 64px;
-    background-color: rgba(0, 0, 0, 0.5);
-  }
-  .overlay svg {
-    scale: 1.5;
-  }
-  .default-overlay {
-    border-radius:5px;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: rgba(0, 0, 0, 0.5); /* Opacité par défaut */
-  }
-  .card-title{
-    position: relative;
-    font-weight: 500;
-    font-size: clamp(1.25rem, 0.85rem + 0.8vw, 1.75rem);
-    width: 60%;
-    color:#FFF;
-    padding: 20px;
-  }
-  .delete{
-    margin-top: 48px;
-    width: 80vw;
-    display: flex;
-    align-items: center;
-    background-color: #fff;
-    padding: 20px;
-    border-radius:5px;
-    color: #202020;
-    font-weight: 500;
-    font-size: 18px;
-    justify-content: center;
-    color: #E61818;
-    height: 70px;
-    border:none;
-    cursor: pointer;
-    margin-bottom: 50px;
-  }
-  .delete:hover{
-    background-color: #E9E9E9;
-  }
-   #editButtonForm:hover{
-    opacity: 0.8;
-    cursor: pointer;
-  }
-    /* Modal */
-    /* Style de la popup */
-  /* Style de la fenêtre contextuelle */
-  #popup-designers, #popup-oeuvres  {
-    display: none; /* Par défaut, la fenêtre contextuelle est cachée */
-    position: fixed; /* Position fixe pour s'assurer qu'elle reste au-dessus du contenu */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
-    z-index: 1000; /* Assure que la fenêtre contextuelle est au-dessus du contenu */
-    overflow: auto; /* Permet le défilement si le contenu est trop long */
-  }
-
-  /* Style du contenu de la fenêtre contextuelle */
-  .modal-content {
-    background-color: #fefefe;
-    margin: 10% auto; /* Centrer la fenêtre contextuelle verticalement et horizontalement */
-    padding: 20px;
-    border-radius: 5px;
-    max-width: 600px; /* Largeur maximale de la fenêtre contextuelle */
-  }
-
-  /* Style du bouton de fermeture */
-  .close {
-    color: #202020;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-
-  .close:hover,
-  .close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-
-  /* Style du formulaire */
-  form {
-    margin-top: 20px;
-  }
-
-  /* Style des étiquettes */
-  label {
-    margin-bottom: 5px;
-  }
-
-  /* Style des cases à cocher */
-  input[type="checkbox"] {
-    margin-right: 5px;
-    margin-bottom:10px;
-  }
-
-  /* Style du bouton de soumission */
-  input[type="submit"] {
-    background-color: #202020;
-    color: white;
-    padding: 15px 25px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top:32px;
-    font-size: 16px;
-  }
-
-  input[type="submit"]:hover {
-    background-color: #2B2B2B;
-  }
-  .button-form{
-    display:flex;
-    align-items:center;
-    gap:16px;
-  }
-  #submitFormButton:hover, #cancelFormButton:hover{
-    opacity: 0.8;
-  }
-  @media screen and (min-width:0px) and (max-width:349px) {
-    input.input-name-list{
-      width: 60vw;
-      height: 50px;
-    }
-    .button-form{
-      gap:8px;
-      flex-wrap:wrap;
-    }
-    #submitFormButton, #cancelFormButton{
-      scale: 0.8
-    }
-   .top-header{
-      padding: 28px 5vw;
-      height: 125px;
-    }
-    .subtitle{
-      width: 80vw;
-    }
-
-    .flex-title{
-      margin-top: 0px;
-      gap: 8px;
-    }
-
-    .flex-title-list{
-      margin-top: 48px;
-      flex-direction:column;
-      gap: 16px;
-      align-items:start;
-    }
-
-     h2{
-      font-size: 18px;
-    }
-    .list-show{
-      padding: 0 5vw;
-    }
-    .flex-card-list{
-      margin-top: 32px;
-      gap: 5vw;
-    }
-    .card-list{
-      width: 90vw;
-      height: 90vw;
-    }
-    .overlay{
-      gap: 48px;
-    }
-    .overlay svg {
-      scale: 1;
-    }
-
-    .card-title{
-      width: 80%;
-      font-size: clamp(1rem, 1rem + 2.2923vw, 1.5rem);
-      padding: 15px;
-    }
-    .delete{
-      width: 90vw;
-      height: 60px;
-      font-size: 14px;
-    }
-    #editButtonForm{
-      scale: 0.7;
-    }
-    /* Modal */
-
-    .modal-content {
-      width: 90vw;
-      padding: 0;
-    }
-    .modal-content .field{
-      padding: 30px;
-    }
-    .close {
-      padding: 15px;
-      font-size: 24px;
-    }
-
-    /* Style du formulaire */
-    form {
-      margin-top: 20px;
-    }
-
-    /* Style des étiquettes */
-    label {
-      margin-bottom: 5px;
-    }
-
-    /* Style des cases à cocher */
-    input[type="checkbox"] {
-      margin-right: 5px;
-      margin-bottom:10px;
-    }
-
-    /* Style du bouton de soumission */
-    input[type="submit"] {
-      padding: 15px 25px;
-      margin-top:28px;
-      font-size: 14px;
-    }
-
-  }
-  @media screen and (min-width:350px) and (max-width:800px) {
-    input.input-name-list{
-      width: 60vw;
-      height: 50px;
-    }
-    .button-form{
-      gap: 8px;
-    }
-    #submitFormButton, #cancelFormButton{
-      scale: 0.8
-    }
-   .top-header{
-      padding: 48px 5vw;
-      height: 100px;
-    }
-    .subtitle{
-      width: 80vw;
-    }
-
-    .flex-title{
-      margin-top: 0px;
-      gap: 8px;
-    }
-
-    .flex-title-list{
-      margin-top: 48px;
-      flex-direction:column;
-      gap: 16px;
-      align-items:start;
-    }
-
-     h2{
-      font-size: 18px;
-    }
-    .list-show{
-      padding: 0 5vw;
-    }
-    .flex-card-list{
-      margin-top: 32px;
-      gap: 5vw;
-    }
-    .card-list{
-      width: 40vw;
-      max-width: 200px;
-      max-height:200px;
-      height: 40vw;
-    }
-    .overlay{
-      gap: 48px;
-    }
-    .overlay svg {
-      scale: 1;
-    }
-
-    .card-title{
-      width: 80%;
-      font-size: clamp(1.125rem, 1.0278rem + 0.4444vw, 1.25rem);
-      padding: 15px;
-    }
-    .delete{
-      width: 90vw;
-      height: 60px;
-      font-size: 16px;
-    }
-    #editButtonForm{
-      scale: 0.8;
-    }
-    /* Modal */
-
-    .modal-content {
-      width: 90vw;
-      padding: 0;
-    }
-    .modal-content .field{
-      padding: 30px;
-    }
-    .close {
-      padding: 15px;
-      font-size: 24px;
-    }
-
-    /* Style du formulaire */
-    form {
-      margin-top: 20px;
-    }
-
-    /* Style des étiquettes */
-    label {
-      margin-bottom: 5px;
-    }
-
-    /* Style des cases à cocher */
-    input[type="checkbox"] {
-      margin-right: 5px;
-      margin-bottom:10px;
-    }
-
-    /* Style du bouton de soumission */
-    input[type="submit"] {
-      padding: 15px 25px;
-      margin-top:28px;
-      font-size: 14px;
-    }
-  }
-</style>
 <section class="top-header">
   <%= link_to profil_path do%>
     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -392,7 +6,7 @@
   <%end%>
   <div class="flex-title">
     <%= form_with(model: @list, local: true) do |form| %>
-      <div class="field button-form">
+      <div class="field list-edit-name">
         <%= form.text_field :name, class: "input-name-list" %>
         <svg id="submitFormButton" width="25" height="18" viewBox="0 0 25 18" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M8.53222 18L0 9.46778L2.13306 7.33472L8.53222 13.7339L22.2661 0L24.3992 2.13306L8.53222 18Z" fill="white"/>
@@ -417,23 +31,23 @@
   </div>
   <p class="subtitle"><%= @list.designers.count + @list.oeuvres.count %> références</p>
 </section>
-<section class="list-show">
+<section class="grid-1">
   <div class="flex-title-list">
     <h2>Les designers </h2>
     <%= link_to 'Ajouter des designers', '#', id: 'openPopupDesigners', class:"button dark" %>
   </div>
   <div class="flex-card-list">
     <% @list.designers.each do |designer| %>
-      <div class="card-list" id="designer_<%= designer.id %>" style="background-image: url('<%= designer.image %>'); background-repeat: no-repeat; background-position: center; background-size: cover;">
+      <div class="card-ref" id="designer_<%= designer.id %>" style="background-image: url('<%= designer.image %>'); background-repeat: no-repeat; background-position: center; background-size: cover;">
         <div class="default-overlay"></div>
         <p class="card-title"><%= designer.nom_designer %></p>
-        <div class="overlay" style="display: none;">
+        <div class="overlay-card-ref" style="display: none;">
           <%= link_to designer_path(designer.id), class: "delete-flex" do %>
             <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M15 6.13636C16.085 6.13636 17.1255 6.56737 17.8927 7.33456C18.6599 8.10176 19.0909 9.1423 19.0909 10.2273C19.0909 11.3122 18.6599 12.3528 17.8927 13.12C17.1255 13.8872 16.085 14.3182 15 14.3182C13.915 14.3182 12.8745 13.8872 12.1073 13.12C11.3401 12.3528 10.9091 11.3122 10.9091 10.2273C10.9091 9.1423 11.3401 8.10176 12.1073 7.33456C12.8745 6.56737 13.915 6.13636 15 6.13636ZM15 0C21.8182 0 27.6409 4.24091 30 10.2273C27.6409 16.2136 21.8182 20.4545 15 20.4545C8.18182 20.4545 2.35909 16.2136 0 10.2273C2.35909 4.24091 8.18182 0 15 0ZM2.97273 10.2273C4.07489 12.4777 5.78633 14.3737 7.91247 15.6999C10.0386 17.026 12.4942 17.7291 15 17.7291C17.5058 17.7291 19.9614 17.026 22.0875 15.6999C24.2137 14.3737 25.9251 12.4777 27.0273 10.2273C25.9251 7.97685 24.2137 6.0808 22.0875 4.75465C19.9614 3.42851 17.5058 2.72547 15 2.72547C12.4942 2.72547 10.0386 3.42851 7.91247 4.75465C5.78633 6.0808 4.07489 7.97685 2.97273 10.2273Z" fill="white"/>
             </svg>
           <% end %>
-          <%= link_to remove_designer_list_url(@list, designer_id: designer.id), method: :delete, class: "btn btn-danger delete-flex" do %>
+          <%= link_to remove_designer_list_path(@list, designer_id: designer.id), method: :delete, class: "delete-flex" do %>
             <svg width="23" height="26" viewBox="0 0 23 26" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.94444 20.4444C9.28333 20.4444 9.60834 20.3098 9.84797 20.0702C10.0876 19.8306 10.2222 19.5056 10.2222 19.1667V11.5C10.2222 11.1611 10.0876 10.8361 9.84797 10.5965C9.60834 10.3568 9.28333 10.2222 8.94444 10.2222C8.60556 10.2222 8.28055 10.3568 8.04092 10.5965C7.80129 10.8361 7.66667 11.1611 7.66667 11.5V19.1667C7.66667 19.5056 7.80129 19.8306 8.04092 20.0702C8.28055 20.3098 8.60556 20.4444 8.94444 20.4444ZM21.7222 5.11111H16.6111V3.83333C16.6111 2.81667 16.2072 1.84165 15.4884 1.12276C14.7695 0.403868 13.7944 0 12.7778 0H10.2222C9.20556 0 8.23054 0.403868 7.51165 1.12276C6.79276 1.84165 6.38889 2.81667 6.38889 3.83333V5.11111H1.27778C0.93889 5.11111 0.613882 5.24573 0.374252 5.48536C0.134623 5.72499 0 6.05 0 6.38889C0 6.72778 0.134623 7.05278 0.374252 7.29241C0.613882 7.53204 0.93889 7.66667 1.27778 7.66667H2.55556V21.7222C2.55556 22.7389 2.95942 23.7139 3.67831 24.4328C4.3972 25.1517 5.37223 25.5556 6.38889 25.5556H16.6111C17.6278 25.5556 18.6028 25.1517 19.3217 24.4328C20.0406 23.7139 20.4444 22.7389 20.4444 21.7222V7.66667H21.7222C22.0611 7.66667 22.3861 7.53204 22.6257 7.29241C22.8654 7.05278 23 6.72778 23 6.38889C23 6.05 22.8654 5.72499 22.6257 5.48536C22.3861 5.24573 22.0611 5.11111 21.7222 5.11111ZM8.94444 3.83333C8.94444 3.49445 9.07907 3.16944 9.3187 2.92981C9.55833 2.69018 9.88333 2.55556 10.2222 2.55556H12.7778C13.1167 2.55556 13.4417 2.69018 13.6813 2.92981C13.9209 3.16944 14.0556 3.49445 14.0556 3.83333V5.11111H8.94444V3.83333ZM17.8889 21.7222C17.8889 22.0611 17.7543 22.3861 17.5146 22.6257C17.275 22.8654 16.95 23 16.6111 23H6.38889C6.05 23 5.72499 22.8654 5.48536 22.6257C5.24573 22.3861 5.11111 22.0611 5.11111 21.7222V7.66667H17.8889V21.7222ZM14.0556 20.4444C14.3944 20.4444 14.7195 20.3098 14.9591 20.0702C15.1987 19.8306 15.3333 19.5056 15.3333 19.1667V11.5C15.3333 11.1611 15.1987 10.8361 14.9591 10.5965C14.7195 10.3568 14.3944 10.2222 14.0556 10.2222C13.7167 10.2222 13.3917 10.3568 13.152 10.5965C12.9124 10.8361 12.7778 11.1611 12.7778 11.5V19.1667C12.7778 19.5056 12.9124 19.8306 13.152 20.0702C13.3917 20.3098 13.7167 20.4444 14.0556 20.4444Z" fill="white"/>
             </svg>
@@ -443,21 +57,21 @@
     <% end %>
   </div>
   <div class="flex-title-list">
-    <h2>Les références </h2>
+    <h2>Les références</h2>
     <%= link_to 'Ajouter des œuvres', '#', id: 'openPopupOeuvres', class:"button dark" %>
   </div>
   <div class="flex-card-list">
     <% @list.oeuvres.each do |oeuvre| %>
-      <div class="card-list" id="oeuvre_<%= oeuvre.id %>" style="background-image: url('<%= oeuvre.image %>'); background-repeat: no-repeat; background-position: center; background-size: cover;">
+      <div class="card-ref" id="oeuvre_<%= oeuvre.id %>" style="background-image: url('<%= oeuvre.image %>'); background-repeat: no-repeat; background-position: center; background-size: cover;">
         <div class="default-overlay"></div>
         <p class="card-title"><%= oeuvre.nom_oeuvre %></p>
-        <div class="overlay" style="display: none;">
+        <div class="overlay-card-ref" style="display: none;">
           <%= link_to oeuvre_path(oeuvre.id), class: "delete-flex" do %>
             <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M15 6.13636C16.085 6.13636 17.1255 6.56737 17.8927 7.33456C18.6599 8.10176 19.0909 9.1423 19.0909 10.2273C19.0909 11.3122 18.6599 12.3528 17.8927 13.12C17.1255 13.8872 16.085 14.3182 15 14.3182C13.915 14.3182 12.8745 13.8872 12.1073 13.12C11.3401 12.3528 10.9091 11.3122 10.9091 10.2273C10.9091 9.1423 11.3401 8.10176 12.1073 7.33456C12.8745 6.56737 13.915 6.13636 15 6.13636ZM15 0C21.8182 0 27.6409 4.24091 30 10.2273C27.6409 16.2136 21.8182 20.4545 15 20.4545C8.18182 20.4545 2.35909 16.2136 0 10.2273C2.35909 4.24091 8.18182 0 15 0ZM2.97273 10.2273C4.07489 12.4777 5.78633 14.3737 7.91247 15.6999C10.0386 17.026 12.4942 17.7291 15 17.7291C17.5058 17.7291 19.9614 17.026 22.0875 15.6999C24.2137 14.3737 25.9251 12.4777 27.0273 10.2273C25.9251 7.97685 24.2137 6.0808 22.0875 4.75465C19.9614 3.42851 17.5058 2.72547 15 2.72547C12.4942 2.72547 10.0386 3.42851 7.91247 4.75465C5.78633 6.0808 4.07489 7.97685 2.97273 10.2273Z" fill="white"/>
             </svg>
           <% end %>
-          <%= link_to remove_oeuvre_list_url(@list, oeuvre_id: oeuvre.id), method: :delete, class: "btn btn-danger delete-flex" do %>
+          <%= link_to remove_oeuvre_list_path(@list, oeuvre_id: oeuvre.id), method: :delete, class: "delete-flex" do %>
             <svg width="23" height="26" viewBox="0 0 23 26" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path d="M8.94444 20.4444C9.28333 20.4444 9.60834 20.3098 9.84797 20.0702C10.0876 19.8306 10.2222 19.5056 10.2222 19.1667V11.5C10.2222 11.1611 10.0876 10.8361 9.84797 10.5965C9.60834 10.3568 9.28333 10.2222 8.94444 10.2222C8.60556 10.2222 8.28055 10.3568 8.04092 10.5965C7.80129 10.8361 7.66667 11.1611 7.66667 11.5V19.1667C7.66667 19.5056 7.80129 19.8306 8.04092 20.0702C8.28055 20.3098 8.60556 20.4444 8.94444 20.4444ZM21.7222 5.11111H16.6111V3.83333C16.6111 2.81667 16.2072 1.84165 15.4884 1.12276C14.7695 0.403868 13.7944 0 12.7778 0H10.2222C9.20556 0 8.23054 0.403868 7.51165 1.12276C6.79276 1.84165 6.38889 2.81667 6.38889 3.83333V5.11111H1.27778C0.93889 5.11111 0.613882 5.24573 0.374252 5.48536C0.134623 5.72499 0 6.05 0 6.38889C0 6.72778 0.134623 7.05278 0.374252 7.29241C0.613882 7.53204 0.93889 7.66667 1.27778 7.66667H2.55556V21.7222C2.55556 22.7389 2.95942 23.7139 3.67831 24.4328C4.3972 25.1517 5.37223 25.5556 6.38889 25.5556H16.6111C17.6278 25.5556 18.6028 25.1517 19.3217 24.4328C20.0406 23.7139 20.4444 22.7389 20.4444 21.7222V7.66667H21.7222C22.0611 7.66667 22.3861 7.53204 22.6257 7.29241C22.8654 7.05278 23 6.72778 23 6.38889C23 6.05 22.8654 5.72499 22.6257 5.48536C22.3861 5.24573 22.0611 5.11111 21.7222 5.11111ZM8.94444 3.83333C8.94444 3.49445 9.07907 3.16944 9.3187 2.92981C9.55833 2.69018 9.88333 2.55556 10.2222 2.55556H12.7778C13.1167 2.55556 13.4417 2.69018 13.6813 2.92981C13.9209 3.16944 14.0556 3.49445 14.0556 3.83333V5.11111H8.94444V3.83333ZM17.8889 21.7222C17.8889 22.0611 17.7543 22.3861 17.5146 22.6257C17.275 22.8654 16.95 23 16.6111 23H6.38889C6.05 23 5.72499 22.8654 5.48536 22.6257C5.24573 22.3861 5.11111 22.0611 5.11111 21.7222V7.66667H17.8889V21.7222ZM14.0556 20.4444C14.3944 20.4444 14.7195 20.3098 14.9591 20.0702C15.1987 19.8306 15.3333 19.5056 15.3333 19.1667V11.5C15.3333 11.1611 15.1987 10.8361 14.9591 10.5965C14.7195 10.3568 14.3944 10.2222 14.0556 10.2222C13.7167 10.2222 13.3917 10.3568 13.152 10.5965C12.9124 10.8361 12.7778 11.1611 12.7778 11.5V19.1667C12.7778 19.5056 12.9124 19.8306 13.152 20.0702C13.3917 20.3098 13.7167 20.4444 14.0556 20.4444Z" fill="white"/>
             </svg>
@@ -466,7 +80,7 @@
       </div>
     <% end %>
   </div>
-  <%= button_to 'Supprimer la liste', list_path(@list), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cette liste ?" }, class: "delete" %>
+  <%= button_to 'Supprimer la liste', list_path(@list), method: :delete, data: { confirm: "Êtes-vous sûr de vouloir supprimer cette liste ?" }, class: "button delete" %>
 </section>
 <script>
   $(document).ready(function() {
