--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,18 +1,3 @@
-<style>
-  h1{
-  margin-top: 32px;
-    }
-    .top-header{
-  padding: 64px 10vw;
-  height: 100px;
-  background-color: #202020;
-  color:#FFF;
-   position: relative;
-  }
-  .form-list{
-    padding: 60px 10vw;
-  }
-</style>
 <section class="top-header">
   <%= link_to lists_path do%>
     <svg width="22" height="20" viewBox="0 0 22 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -21,6 +6,6 @@
   <%end%>
   <h1>Créer une liste</h1>
 </section>
-<section class="form-list">
+<section class="grid-1" style="padding-bottom: 32px;">
   <%= render 'form' %>
 </section>
