--- a/app/assets/stylesheets/components/_listmodal.scss
+++ b/app/assets/stylesheets/components/_listmodal.scss
@@ -21,19 +21,9 @@
    width: 70vw;
    margin-bottom: 32px;
  }
-
- input[type="submit"] {
-   background-color: $primary-color;
-   color: $secondary-color;
-   margin-top: 32px;
- }
-
- input[type="submit"]:hover {
-   background-color: #2B2B2B;
- }
-
  /* Add */
  .flex-card {
+  margin: 32px 0;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
@@ -93,7 +83,6 @@
    font-size: 16px;
    color: $primary-color;
    background-color: $secondary-color;
-   margin-top: 20px;
    position: relative;
  }
 
