--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -6,6 +6,8 @@
   width: 100%;
   background-color: #F7F7F7;
   position: relative;
+  display: flex;
+  align-items: center;
 }
 
 .popup {
@@ -30,7 +32,7 @@
   padding-bottom: 45px
 }
 
-.popup form {
+.popup .popup-content form {
   padding: 0 50px;
 }
 
