--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <header>
   <%= link_to(root_path, class: "logo-header") do %>
-    <%= image_tag "logo-alpha.svg", alt: "", class: "home-index" %>
+    <%= image_tag "logo-beta.svg", alt: "", class: "home-index" %>
     <p class="name-header">Omniscient <br>
       Design</p>
   <% end %>
