--- a/app/assets/stylesheets/pages/_log.scss
+++ b/app/assets/stylesheets/pages/_log.scss
@@ -21,19 +21,20 @@
 
 .form {
   margin-top: 32px;
-  width: 60vw;
+  width: 55vw;
   display: flex;
   gap: 16px;
   justify-content: center;
   align-items: center;
   height: 100%;
-  padding: 30px 0;
+  padding: 30px 50px;
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 999;
 }
 
 .form form {
+  width: 100%;
   display: flex;
   gap: 16px;
   flex-direction: column;
