--- a/app/views/oeuvres/index.html.erb
+++ b/app/views/oeuvres/index.html.erb
@@ -74,6 +74,9 @@
       <%= render partial: 'oeuvres/card', collection: @oeuvres, as: :card, locals: { class_name: 'card' } %>
     </div>
     <div id="load-more-trigger" data-type="oeuvres"></div>
+    <div id="loader">
+      <img src="<%= asset_path('loader.gif') %>" alt="Loading...">
+    </div>
   </div>
   <div class="button-nav">
     <button class="arrow-button up">
