Search Category / Parrainage

--- a/app/views/bug_reports/new.html.erb
+++ b/app/views/bug_reports/new.html.erb
@@ -27,7 +27,7 @@
   <% end %>
   <p style="margin-top:16px" class="subtitle-top">Votre contribution</p>
   <h1>Signaler un problème</h1>
-  <p class="subtitle">Yorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis.</p>
+  <p class="subtitle">Si vous rencontrez un problème avec notre site, une fonctionnalité ou un service, nous vous invitons à nous en informer afin que nous puissions résoudre rapidement la situation. </p>
 </section>
 <%= form_with(model: @bug_report, local: true, data: { turbo: false }) do |form| %>
   <% if @bug_report.errors.any? %>
