--- a/app/assets/stylesheets/base/_font.scss
+++ b/app/assets/stylesheets/base/_font.scss
@@ -72,6 +72,9 @@ p{
 .black{
   color: $primary-color;
 }
+.underline{
+  text-decoration: underline;
+}
 
 @media screen and (min-width:426px) and (max-width: 600px) {
   h1 {
